Fixed Navigation Alignment

--- a/src/Styles/Navigation.scss
+++ b/src/Styles/Navigation.scss
@@ -1444,7 +1444,7 @@ img {
 
 @media only screen and (min-width: 992px) {
     .primary-nav>ul>li>ul li a {
-        padding: 1em 1em 0.5em 1em;
+        padding: 0.5em 1em;
         border-bottom: 1px solid
     }
 }
